--- a/firesim-software-env/Dockerfile
+++ b/firesim-software-env/Dockerfile
@@ -25,6 +25,7 @@ RUN /usr/share/debconf/fix_db.pl && \
   && \
   rm -rf /var/lib/apt/lists/* && \
   locale-gen en_US.UTF-8 && \
+  # Create a "rose" user with password "Docker!"
   useradd -ms /bin/bash rose && \
   usermod -aG sudo rose && \
   echo "rose:Docker!" | chpasswd
