Updated riscv-env to bionic

--- a/riscv-env/Dockerfile
+++ b/riscv-env/Dockerfile
@@ -1,5 +1,5 @@
-# Dockerfile for tag rhitdeca/riscv-env:1.0.0
-FROM ubuntu:artful
+# Dockerfile for tag rhitdeca/riscv-env:2.0.0
+FROM ubuntu:bionic
 
 # Install dependencies
 RUN \
