--- a/cuda-neuro-simulation-env/Dockerfile
+++ b/cuda-neuro-simulation-env/Dockerfile
@@ -52,12 +52,14 @@ RUN \
   echo "export PATH=/usr/local/cuda-10.2/bin${PATH:+:${PATH}}" >> /home/rose/.bashrc && \
   echo "export LD_LIBRARY_PATH=/usr/local/cuda-10.2/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}" >> /home/rose/.bashrc && \
   echo "complete -W \"\\\`grep -oE '^[a-zA-Z0-9_.-]+:([^=]|$)' ?akefile | sed 's/[^a-zA-Z0-9_.-]*$//'\\\`\" make" >> /home/rose/.bashrc && \
+  echo "PS1=\"\\[\\e]0;\\u@\\h: \\w\\a\\]${debian_chroot:+($debian_chroot)}\\[\\033[01;32m\\]\\u@\\h\\[\\033[00m\\]:\\[\\033[01;34m\\]\\w\\[\\033[00m\\]\\$ \"" >> /home/rose/.bashrc && \
+  echo "\$include /etc/inputrc" > /home/rose/.inputrc && \
+  echo "\"\\e[1;5A\": history-search-backward" >> /home/rose/.inputrc && \
+  echo "\"\\e[1;5B\": history-search-forward" >> /home/rose/.inputrc && \
   touch /home/rose/.sudo_as_admin_successful
 
 # Update Boost to 1.65.1 for CUDA
-RUN \
-  rm -rf /usr/local/include/boost/* && \
-  echo "PS1=\"\\[\\e]0;\\u@\\h: \\w\\a\\]${debian_chroot:+($debian_chroot)}\\[\\033[01;32m\\]\\u@\\h\\[\\033[00m\\]:\\[\\033[01;34m\\]\\w\\[\\033[00m\\]\\$ \"" >> /home/rose/.bashrc
+RUN rm -rf /usr/local/include/boost/*
 ADD boost_1_65_1.tar.gz /usr/local/include/boost/
 
 VOLUME /project
